--- a/Style.css
+++ b/Style.css
@@ -19,28 +19,35 @@ header {
     display: flex;
     justify-content: space-around;
     font-size: 16px;
+    align-items: center;
 }
 
 .left-header-group {
     display: flex;
+    align-items: center;
+}
+
+.left-header-group img {
+    width: 50px;
+    margin: 0 20px;
 }
 
 .header-heading {
     font-weight: bolder;
 }
 
-nav a {
+.navbar a {
     position: relative;
     text-decoration: none;
     color: white;
     margin: 0 10px 0 20px;
 }
 
-nav a:hover {
+.navbar a:hover {
     text-shadow: white 0px 0px 10px;
 }
 
-nav a::after {
+.navbar a::after {
     content: " ";
     position: absolute;
     left: 0;
@@ -54,8 +61,61 @@ nav a::after {
     transition: transform .3s;
 }
 
-nav a:hover::after {
+.navbar a:hover::after {
     transform-origin: left;
     transform: scaleX(1);
 }
 
+
+@media (max-width: 460px) {
+    .left-header-group img {
+        width: 50px;
+        margin: 0 20px;
+        scale: 0;
+        position: absolute;
+    }
+
+    .navbar {
+        position: absolute;
+        scale: 0;
+    }
+
+    header {
+        font-size: 14px;
+        padding: 15px;
+    }
+
+    .menu-icon {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 599px) {
+    .left-header-group img {
+        width: 50px;
+        margin: 0 20px;
+        scale: 0;
+        position: absolute;
+    }
+
+    .navbar {
+        position: absolute;
+        scale: 0;
+    }
+
+    header {
+        font-size: 16px;
+        padding: 20px;
+    }
+
+    .menu-icon {
+        font-size: 22px;
+    } 
+}
+
+@media (min-width: 600px) {
+    .menu-icon {
+        position: absolute;
+        scale: 0;
+    }
+}
